<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FallDetection</string>
    <string name="on">ON</string>
    <string name="view">View</string>
    <string name="fall">Fall</string>
    <string name="txt1">合成値 :</string>
    <string name="txt2">気圧値 :</string>
    <string name="txt3">傾斜角 :\n回転角 :</string>
    <string name="txt12">判定 </string>
    <string name="txt13">転倒判定 </string>
    <string name="txt14">気圧値 </string>
    <string name="txt9">歩数</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyBXAqdJhQEUuoLPpLetRsb-RMfSLZ3bl2Q</string>

</resources>
