<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <TextView
        android:id="@+id/txt1"
        android:text="@string/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt12"
        android:text="@string/txt12"
        android:layout_toRightOf="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt2"
        android:text="@string/txt2"
        android:layout_below="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt13"
        android:text="@string/txt12"
        android:layout_toRightOf="@id/txt2"
        android:layout_below="@id/txt12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt3"
        android:text="@string/txt3"
        android:layout_below="@id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt14"
        android:text="@string/txt12"
        android:layout_toRightOf="@id/txt3"
        android:layout_below="@id/txt13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_below="@id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:onClick="doAction"
        android:text="@string/on"
        android:textSize="12sp"/>

</RelativeLayout>
